--- a/css/home.css
+++ b/css/home.css
@@ -24,7 +24,6 @@ body {
     right: 0;
     bottom:0;
     background: rgba(0, 0, 0, 0.65);
-	
 }
 
 a{
@@ -638,10 +637,18 @@ main {
 
 
 /* footer */
-footer {
+.footer {
 	background-color: #F67F05;
 	width: 100%;
 	height: 300px;
+	left: 0;
+	position: absolute;
+}
+.footer::before {
+	content: '';
+	height: 50px;
+	width: 100%;
+	position: absolute;
 }
 
 @media screen and (max-width: 850px){
